--- a/passwordviewsample/build.gradle
+++ b/passwordviewsample/build.gradle
@@ -25,5 +25,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
-    compile project(':library')
+    compile 'com.xwray:passwordview:0.1'
 }
