--- a/passwordviewsample/build.gradle
+++ b/passwordviewsample/build.gradle
@@ -6,6 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.xwray.passwordviewsample"
+        vectorDrawables.useSupportLibrary = true
         minSdkVersion 14
         targetSdkVersion 24
         versionCode 1
@@ -22,7 +23,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.1.0'
-    compile 'com.android.support:design:24.1.0'
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:design:24.1.1'
     compile project(':library')
 }
